# waypointsZA

./: .gitignore  CONTRIBUTING.md  README.md  South_Africa_Cape.cup  South_Africa_Cape_Outlandings.cup  ZA_Cape.cup  ZA_Cape.test.cup.csv  ZA_Cape_Outlandings.cup  ZA_Cape_outlandings.cup  cap20b.cup  cape.cup  release.bash
.github/workflows/: generate.yml  pylint.yml
cup/: Potchefstroom, South Africa, South African Nationals, 2021 - 15m, 2 Seater and Club Class SeeYou.cup
original_cups/: BGA 2021 SeeYou.cup  Potch2018Numbered.cup  SA+Natioanals+2020+Tpt.cup  Turnpoints+SA+Nats+2021+Ver2.cup  download.bash  gauteng18.cup
script/: 2kml.bash  name_cup.style  pyproject.toml  release.bash  sanitise.py
