[tool.poetry]
name = "waypointsza"
version = "0.1.0"
description = "Waypoints for glider pilots flying in the Cape, South Africa. "
authors = ["Colin Sindle <csindle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aerofiles = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
